# playground-robotic

./: .gitignore  MODULE.bazel  README.md  format.sh  requirements.txt
src/offset_estimation/: BUILD.bazel  planar_2d_offsets.py
src/python_binary_example/: BUILD.bazel  example.py
src/urdf/: BUILD.bazel  planar_rr_arm.urdf
