"""
Robotic Playground

Siamak Faal
siamak.faal@gmail.com
"""
module(
    name = "playground_robotic",
    version = "1.0",
)

#--------------------------------------------------------------------------------------------------
# Python 

bazel_dep(name = "rules_python", version = "0.40.0")


pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "python_deps",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
    )

use_repo(pip, "python_deps")

# python = use_extension("@rules_python//python/extensions:python.bzl", "python")
# python.toolchain(
#     python_version = "3.11",
# )

# pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
# pip.parse(
#     hub_name = "python_deps",
#     python_version = "3.11",
#     requirements_lock = "//:requirements.txt",
# )

# use_repo(pip, "python_deps")

# # Register toolchain
# register_toolchains("@rules_python//python:all")
